--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://cdn.glitch.global/597bd9b9-aab1-4a87-873b-f2f7edc8771c/welcomeCatpng-blue.gif?v=1712062399535"
+      href="https://cdn.glitch.global/597bd9b9-aab1-4a87-873b-f2f7edc8771c/logoHCAT.png?v=1712065867594"
     />
     <style>
       body {
@@ -117,7 +117,7 @@
         padding: 10px 20px;
         background-color: transparent;
         border: 2px solid gold;
-        color: red;
+        color: blue;
         font-size: 1.2rem;
         text-align: center;
         cursor: pointer;
