--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <div class="menu">
       <a href="https://t.me/horrorcatonbase" class="menu-link">Telegram</a>
       <a href="https://twitter.com/horrorcatonbase" class="menu-link">X</a>
-      <a href="https://basescan.org/" class="menu-link">Contract</a>   
+      <a href="https://dexscreener.com/base/0xe1D8f05ac480bB7CEEd25cB37d20147878594F9a" class="menu-link">DEX</a>   
       
       
       <div class="menu-link" onclick="showPopupShrine()">The Shrine</div>
@@ -274,7 +274,7 @@ Welcome to Horror Cat. The games has begun.
         <br />
       </div>
     </div>
-    <a href="https://app.uniswap.org/swap?chain=base&use=v2&outputCurrency=" class="btn" style="bottom: 5%">BUY</a>
+    <a href="https://app.uniswap.org/swap?chain=base&use=v2&outputCurrency=0xe1D8f05ac480bB7CEEd25cB37d20147878594F9a" class="btn" style="bottom: 5%">BUY</a>
   </body>
   
   <script>
