--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   <body>
     
     <div class="menu">
-      <a href="https://t.me/horrorcat_eth" class="menu-link">Telegram</a>
+      <a href="https://t.me/horrorcat_erc20" class="menu-link">Telegram</a>
       <a href="https://x.com/horrorcat_eth" class="menu-link">X</a>
       <a href="https://dexscreener.com/ethereum/" class="menu-link">DEX</a>   
       
